--- a/{{cookiecutter.file_name}}/{{cookiecutter.file_name}}.tex
+++ b/{{cookiecutter.file_name}}/{{cookiecutter.file_name}}.tex
@@ -24,7 +24,7 @@
 
 \usepackage{listings}
 
-\lstset{% general command to set parameter(s)
+\lstset{
   basicstyle=\ttfamily, % print whole listing small
   %keywordstyle=\color{black}\bfseries\underbar, % underlined bold black keywords
   %commentstyle=\color{grey}, % white comments
@@ -113,8 +113,8 @@
 % \begin{abstract}
 % \end{abstract}
 
-\hypertarget{introduction}{%
-\section{Introduction}\label{introduction}}
+\section{Introduction}%
+\label{introduction}
 
 %\printbibliography
 
