Use triple brackets

--- a/{{cookiecutter.file_name}}/{{cookiecutter.file_name}}.tex
+++ b/{{cookiecutter.file_name}}/{{cookiecutter.file_name}}.tex
@@ -92,7 +92,7 @@
 \newcommand{\du}{\mathrm{d}}
 
 % title block
-\title{{cookiecutter.title}}
+\title{{{cookiecutter.title}}}
 
 \usepackage[]{authblk}
 \renewcommand\Affilfont{\itshape\small}
